--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "0.23.1",
     "extract-text-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "2.22.0",
+    "node-sass": "3.8.0",
     "postcss-loader": "0.9.1",
     "react-hot-loader": "1.3.0",
     "redux-logger": "2.6.1",
